--- a/datasite.css
+++ b/datasite.css
@@ -1,5 +1,10 @@
-h1, h2{
+h1, h2, h3{
     text-align: center;
+    color: #E60000;
+    font-family: Verdana;
+}
+
+h4{
     color: #E60000;
     font-family: Verdana;
 }
@@ -38,22 +43,30 @@ p{
 }
 
 #chart_div{
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 20px;
     border: transparent;
     align-content: center;
-    margin-left: 100px;
+    margin-left:10%;
+    margin-right:10%;
+    background-color: white;
 }
 
 #header{
     margin-left: 50px;
     margin-right: 50px;
     border: transparent;
+    float: center;
 }
 
 #footer{
     margin-top: 20px;
 }
+
+#picparagraph{
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
 
 p{
     color: white;
@@ -61,6 +74,7 @@ p{
 
 body{
     background-image: url(https://wallpaperscraft.com/image/surface_gray_spot_light_texture_50876_1920x1080.jpg);
+    background-attachment: fixed;
 }
 
 hr{
@@ -89,4 +103,5 @@ a:active{
 
 img{
     width: 200px;
+    border-radius: 10px;
 }
